# skyclock

./: .gitignore  CMakeLists.txt  README.md  VERSION  skyclock.desktop
cmake/: toolchain-aarch64-linux.cmake  toolchain-windows-mingw64.cmake  write_build_time.cmake
src/: clocksync.cpp  clocksync.h  main.cpp  rigcontrol.cpp  rigcontrol.h  settings.cpp  settings.h  wwvdecoder.cpp  wwvdecoder.h
